# chatdemo

./: .env.example  .gitignore  Dockerfile  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  main.py  settings.py
backend/api/: __init__.py  onboarding.py  operator.py  parent.py
backend/db/: __init__.py  config.py  conversations.py  database.py  overrides.py  schema.sql  triage.py
backend/graph/: __init__.py  graph.py  history.py  state.py
backend/graph/nodes/: __init__.py  answer.py  classify.py  escalate.py  guardrails.py  retrieve.py
backend/handbook/: holidays.md  hours.md  meals.md  sick_policy.md  tours.md  tuition.md
backend/handbook/_generic/: meals.md  sick_policy.md
backend/knowledge/: __init__.py  loader.py  overrides.py  retriever.py
backend/knowledge/documents/: __init__.py  bootstrap.py  checksum.py  chunker.py  parser.py  pipeline.py  section_classifier.py  storage.py
backend/prompts/: __init__.py  classifier.py  document_summary.py  escalate.py  lead_capture.py  lookup_answer.py  policy_answer.py  section_classifier.py
backend/tests/: __init__.py  run_evals.py  test_api.py  test_db.py  test_documents_checksum.py  test_documents_chunker.py  test_documents_pipeline.py  test_documents_retrieval.py  test_documents_storage.py  test_graph_routing.py  test_guardrails.py  test_knowledge.py  test_questions.json
docs/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatMessage.tsx  TriageQueue.tsx  (+3 more)
(+5 files in other folders)
